# approxclock

./: LICENSE  README.md  approxclock.py  atime.py  pyproject.toml  setup.py
approxclock/: __init__.py
src/approxclock/: __main__.py  approxclock.py
